# caffe

./: CMakeLists.txt
include/caffe/: blob.hpp  layer.hpp  syncedmem.hpp
include/caffe/layers/: batch_norm_layer.hpp
include/caffe/util/: math_functions.hpp  mkl_alternate.hpp
src/caffe/layers/: batch_norm_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: math_functions.cpp
